--- a/ShiftIndicator/res/xml/settings.xml
+++ b/ShiftIndicator/res/xml/settings.xml
@@ -6,17 +6,17 @@
 	    android:summary="@string/pref_operation_summary">
 	    
 	    <SwitchPreference
-	        android:id="@+id/pref_operation_mode_key"
+	        android:key="pref_operation_mode"
 	        android:title="@string/pref_mode_title" 
 	        android:summary="@string/pref_mode_summary"
 	        android:switchTextOn="@string/pref_mode_off"
 	        android:switchTextOff="@string/pref_mode_on"
 	        android:defaultValue="true"/>
 	    <CheckBoxPreference 
-	        android:id="@+id/pref_haptic_feedback_key"
+	        android:key="pref_haptic_feedback"
 	        android:title="@string/pref_haptic_title"/>
 	    <CheckBoxPreference 
-	        android:id="@+id/pref_audio_feedback_key"
+	        android:key="pref_audio_feedback"
 	        android:title="@string/pref_audio_title"/>
 	</PreferenceCategory>
 	
