add GT500 vehicle specs"

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -24,6 +24,8 @@
     	<item>Figo</item>
         <item>Focus ST</item>
         <item>Mustang GT</item>
+        <item>2012 Mustang GT500</item>
+        <item>2013 Mustang GT500</item>
     </string-array>
     
 </resources>
