add button to main screen for push-button shift indication.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -130,4 +130,16 @@
     	android:textSize="90sp"
     	android:textStyle="bold" />
 
+    <Button
+    	android:id="@+id/pulse_button"
+    	style="?android:attr/buttonStyleSmall"
+    	android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:layout_alignParentRight="true"
+    	android:layout_alignParentTop="true"
+    	android:text="Pulse"
+    	android:padding="10dp"
+    	android:textSize="20dp"
+    	android:onClick="onPulseButtonClick" />
+
 </RelativeLayout>
